--- a/src/App.module.css
+++ b/src/App.module.css
@@ -129,9 +129,15 @@
 }
 .right_block_gifts_list {
     margin-top: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);
+    justify-content: end;
 }
 .right_block_gift {
-
+    display: grid;
+    justify-items: end;
+    justify-content: end;
 }
 .right_block_gift_title {
     font-family: Inter, sans-serif;
@@ -142,6 +148,9 @@
     color: #E4E5EA;
 }
 .right_block_gift_text {
+    display: grid;
+    justify-items: end;
+    justify-content: end;
     font-family: Montserrat, sans-serif;
     font-size: 16px;
     font-weight: 400;
