--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,6 @@
+/*cursors*/
+/*fonfamily*/
+/** { content-box, ...}*/
 .box {
     padding: 46px 150px;
     background: rgba(160, 144, 144, 0.78);
@@ -173,4 +176,53 @@
     border: none;
     cursor: pointer;
     transition: 300ms;
+}
+.footer {
+    /*display: block;*/
+    height: 315px;
+    margin-top: 70px;
+    padding: 55px 0;
+}
+.footer_sections {
+    display: grid;
+    grid-template-columns: 0.2fr 0.35fr 0.25fr;
+    /*grid-template-rows: 1fr 1fr;*/
+}
+.footer_section {
+
+}
+.footer_section_title {
+    text-transform: uppercase;
+    font-family: Inter, sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 17px;
+    color: #656566;
+}
+.footer_section_text_container {
+    margin-top: 20px;
+}
+.footer_section_text_blocks {
+    display: flex;
+}
+.footer_section_menu_text_block_2 {
+    margin-left: 50px;
+}
+.footer_section_text {
+    font-family: Inter, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #E4E5EA;
+}
+.footer_section_text:nth-child(n+2) {
+    margin-top: 10px;
+}
+.footer_section_contacts_text {
+    text-align: end;
+}
+
+.footer_section_contacts_icons {
+    display: flex;
+    justify-content: end;
 }
