Add_changes_to_styles

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,150 @@
+/*убрать нерабочие стили*/
+/*hover*/
+/*- 320px до 1920px;*/
+/*- pixel perfect;*/
+/*- mobile макет*/
 
-/*fonfamily*/
-/** { content-box, ...}*/
-.box {
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+button {
+    appearance: none;
+    font-family: inherit;
+    outline: 0;
+}
+
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(./styles/fonts/Montserrat/Montserrat-Regular.ttf) format("ttf");
+}
+@font-face {
+    font-family: "Inter";
+    src: url(./styles/fonts/Inter/Inter-Regular.ttf) format("ttf");
+}
+
+@media screen and (max-width: 860px) {
+    .background_purple_ball {
+        width: 40px;
+        height: 40px;
+        left: 296px;
+        top: 236px;
+    }
+    .background_red_big_ball {
+        width: 43px;
+        height: 43px;
+        left: 29px;
+        top: 402px;
+    }
+    .background_red_small_ball {
+        display: none;
+    }
+    .background_purple_light {
+        left: 258px;
+        top: 107px;
+    }
+    .background_red_light {
+        width: 211px;
+        height: 210px;
+        left: -55px;
+        top: 241px;
+    }
+}
+.app {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    min-height: 100vh;
+    box-sizing: border-box;
     padding: 46px 150px;
-    background: rgba(160, 144, 144, 0.78);
-    width: 80%;
+    font-family: "Inter", "Arial", sans-serif;
+    background-color: black;
+}
+
+.background_purple_ball {
+    position: absolute;
+    z-index: -2;
+    width: 60px;
+    height: 60px;
+    left: 868px;
+    top: -2px;
+    background: radial-gradient(
+            64% 64% at 27.25% 26.5%,
+            rgba(236, 208, 255, 0.64) 0%,
+            rgba(161, 93, 207, 0.24) 60%,
+            rgba(118, 49, 164, 0.21) 80%,
+            rgba(86, 24, 128, 0.23) 100%
+    );
+    box-shadow: 3px 6px 27px -10px rgba(177, 118, 217, 0.06);
+    filter: blur(5px);
+    border-radius: 50%;
+}
+.background_red_big_ball {
+    position: absolute;
+    z-index: -2;
+    width: 83px;
+    height: 83px;
+    left: 519px;
+    top: 83px;
+    background: radial-gradient(
+            64% 64% at 27.25% 26.5%,
+            rgba(255, 208, 208, 0.54) 0%,
+            rgba(212, 93, 93, 0.26) 60%,
+            rgba(167, 49, 49, 0.25) 80%,
+            rgba(130, 25, 25, 0.25) 100%
+    );
+    box-shadow: 3px 6px 27px -10px rgba(223, 125, 125, 0.06);
+    border-radius: 50%;
+}
+.background_red_small_ball {
+    position: absolute;
+    z-index: -2;
+    width: 28px;
+    height: 28px;
+    left: 851px;
+    top: 547px;
+    background: radial-gradient(
+            64% 64% at 27.25% 26.5%,
+            rgba(255, 208, 208, 0.48) 0%,
+            rgba(212, 93, 93, 0.248) 60%,
+            rgba(167, 49, 49, 0.264) 80%,
+            rgba(130, 25, 25, 0.232) 100%
+    );
+    box-shadow: 3px 6px 27px -10px rgba(223, 125, 125, 0.06);
+    filter: blur(2.5px);
+    border-radius: 50%;
+}
+.background_purple_light {
+    position: absolute;
+    z-index: -2;
+    width: 259px;
+    height: 259px;
+    left: 602px;
+    top: -154px;
+    background: #833AB4;
+    opacity: 0.5;
+    filter: blur(196px);
+}
+.background_red_light {
+    position: absolute;
+    z-index: -2;
+    width: 311px;
+    height: 311px;
+    left: -102px;
+    top: 251px;
+    background: #961a1a;
+    opacity: 0.5;
+    filter: blur(196px);
+}
+
+.box {
+    max-width: 1140px;
+    min-width: 320px;
+    display: block;
+    box-sizing: border-box;
 }
 .header {
     height: 73px;
@@ -26,7 +166,7 @@
 }
 .menu_services_item {
     cursor: pointer;
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, sans-serif;
     font-size: 16px;
     font-weight: 500;
     color: #E4E5EA;
@@ -38,7 +178,7 @@
     display: flex;
 }
 .contacts_tel_number {
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, sans-serif;
     font-size: 16px;
     font-weight: 500;
     color: #E4E5EA;
@@ -56,7 +196,7 @@
 }
 .header_welbex_logo_description{
     width: 165px;
-    font-family: Montserrat, sans-serif;
+    font-family: Montserrat, Arial, sans-serif;
     font-size: 10px;
     font-weight: 300;
     line-height: 12px;
@@ -77,14 +217,14 @@
     cursor: pointer;
 }
 .left_block_title_text_part_1 {
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, sans-serif;
     font-size: 48px;
     font-weight: 400;
     line-height: 58px;
     color: #E4E5EA;
 }
 .left_block_tile_welbex_text {
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, sans-serif;
     font-size: 48px;
     font-weight: 900;
     line-height: 58px;
@@ -103,7 +243,7 @@
 .left_block_subtitle {
     width: 275px;
     margin-top: 30px;
-    font-family: Montserrat, sans-serif;
+    font-family: Montserrat, Arial, sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
@@ -116,14 +256,14 @@
 }
 
 .right_block_title_white_text {
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, sans-serif;
     font-size: 18px;
     font-weight: 500;
     line-height: 22px;
     color: #E4E5EA;
 }
 .right_block_title_gradient_text {
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, sans-serif;
     font-size: 18px;
     font-weight: 700;
     line-height: 22px;
@@ -142,8 +282,7 @@
 .right_block_gifts_list {
     margin-top: 40px;
     display: grid;
-    gap: 10px;
-    /*30px между блоками gift*/
+    gap: 30px;
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: minmax(68px, auto);
     justify-content: end;
@@ -155,7 +294,7 @@
 }
 .right_block_gift_title {
     text-align: end;
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, sans-serif;
     font-size: 18px;
     font-weight: 500;
     line-height: 22px;
@@ -164,7 +303,7 @@
 }
 .right_block_gift_text {
     text-align: end;
-    font-family: Montserrat, sans-serif;
+    font-family: Montserrat, Arial, sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
@@ -176,7 +315,7 @@
 .right_block_button_consultation_button {
     width: 262px;
     height: 61px;
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 20px;
@@ -195,15 +334,10 @@
 .footer_sections {
     display: grid;
     grid-template-columns: 0.26fr 0.44fr 0.30fr;
-    /*grid-template-rows: 1fr 1fr;*/
-}
-.footer_section {
-
 }
 .footer_section_title {
-    cursor: pointer;
     text-transform: uppercase;
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, sans-serif;
     font-size: 14px;
     font-weight: 700;
     line-height: 17px;
@@ -220,7 +354,7 @@
 }
 .footer_section_text {
     cursor: pointer;
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
@@ -228,14 +362,14 @@
 }
 .footer_section_contacts_tel {
     cursor: pointer;
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 20px;
     color: #E4E5EA;
 }
 .footer_section_contacts_address {
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
@@ -264,7 +398,7 @@
     margin-left: 10px;
 }
 .footer_privacy_policy_text {
-    font-family: Montserrat, sans-serif;
+    font-family: Montserrat, Arial, sans-serif;
     font-size: 12px;
     font-weight: 400;
     line-height: 15px;
