--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 /*- pixel perfect;*/
-/*!*- mobile макет*/
+/*!* hover for mobile*/
 * {
     box-sizing: border-box;
     margin: 0;
@@ -10,10 +10,12 @@
     font-family: "Montserrat";
     src: url(./styles/fonts/Montserrat/Montserrat-Regular.ttf) format("ttf");
 }
+
 @font-face {
     font-family: "Inter";
     src: url(./styles/fonts/Inter/Inter-Regular.ttf) format("ttf");
 }
+
 @font-face {
     font-family: "Inter-Thin";
     src: url(./styles/fonts/Inter/Inter-Thin.ttf) format("ttf");
@@ -48,6 +50,7 @@
     filter: blur(5px);
     border-radius: 50%;
 }
+
 .background_red_big_ball {
     position: absolute;
     z-index: -2;
@@ -66,6 +69,7 @@
     border-radius: 50%;
     filter: blur(5px);
 }
+
 .background_red_small_ball {
     position: absolute;
     z-index: -2;
@@ -84,6 +88,7 @@
     filter: blur(2.5px);
     border-radius: 50%;
 }
+
 .background_purple_light {
     position: absolute;
     z-index: -2;
@@ -95,6 +100,7 @@
     opacity: 0.5;
     filter: blur(196px);
 }
+
 .background_red_light {
     position: absolute;
     z-index: -2;
@@ -111,9 +117,11 @@
     display: block;
     box-sizing: border-box;
 }
+
 .welbex_logo {
     cursor: pointer;
 }
+
 .menu_services_item {
     cursor: pointer;
     font-size: 16px;
@@ -123,9 +131,11 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 140ms;
 }
+
 .menu_services_item:hover {
     color: #7b83bb;
 }
+
 .contacts_tel_number {
     font-size: 16px;
     font-weight: 500;
@@ -135,15 +145,18 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 140ms;
 }
+
 .contacts_tel_number:hover {
     color: #7b83bb;
 }
+
 .contacts_media_icon {
     width: 20px;
     height: 20px;
     cursor: pointer;
 }
-.header_welbex_logo_description{
+
+.header_welbex_logo_description {
     width: 165px;
     font-family: Montserrat, Arial, sans-serif;
     font-size: 10px;
@@ -151,30 +164,36 @@
     line-height: 12px;
     color: #E4E5EA;
 }
+
 .left_block_title {
     cursor: pointer;
 }
+
 .left_block_title_text_part_1 {
     font-size: 48px;
     font-weight: 400;
     line-height: 58px;
     color: #E4E5EA;
 }
+
 .left_block_tile_welbex_text {
     font-size: 48px;
     font-weight: 900;
     line-height: 58px;
     color: #E4E5EA;
 }
+
 .left_block_tile_welbex_text_part_1 {
     color: #FCB045;
 }
+
 .left_block_tile_welbex_text_part_2 {
     text-transform: uppercase;
     background: linear-gradient(to right, #fcb045 25%, #ff3f78 120%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
 .left_block_subtitle {
     font-family: Montserrat, Arial, sans-serif;
     font-size: 18px;
@@ -190,6 +209,7 @@
     line-height: 17px;
     color: #656566;
 }
+
 .footer_section_text {
     cursor: pointer;
     font-size: 16px;
@@ -200,9 +220,11 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 140ms;
 }
+
 .footer_section_text:hover {
     color: #7b83bb;
 }
+
 .footer_section_contacts_tel {
     cursor: pointer;
     font-size: 16px;
@@ -213,21 +235,26 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 140ms;
 }
+
 .footer_section_contacts_tel:hover {
     color: #7b83bb;
 }
+
 .footer_section_contacts_address {
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
     color: #E4E5EA;
 }
+
 .footer_section_contacts_icon {
     cursor: pointer;
 }
+
 .footer_section_contacts_icon:nth-child(n+2) {
     margin-left: 10px;
 }
+
 .footer_privacy_policy_text {
     font-family: Montserrat, Arial, sans-serif;
     font-size: 12px;
@@ -235,6 +262,7 @@
     line-height: 15px;
     color: #E4E5EA;
 }
+
 .footer_privacy_policy_text_part_2 {
     cursor: pointer;
     text-decoration: underline;
@@ -242,98 +270,120 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 140ms;
 }
+
 .footer_privacy_policy_text_part_2:hover {
     color: #7b83bb;
 }
 
-@media (min-width: 320px) and (max-width: 1440px){
+@media (min-width: 320px) and (max-width: 1440px) {
     .app {
         padding: 46px 100px 0 100px;
     }
+
     .box {
         width: 80%;
     }
 }
+
 /*@media (min-width: 320px) and (max-width: 1920px){}*/
 @media (min-width: 1920px) {
     .app {
         padding: 46px 150px 0 150px;
     }
+
     .box {
         display: block;
         box-sizing: border-box;
         width: 1140px;
     }
+
     .header_desktop {
         height: 73px;
     }
+
     .header_main_content {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
+
     .welbex_logo_and_menu {
         display: flex;
     }
+
     .menu_services_items_list {
         display: flex;
         margin-left: 50px;
     }
+
     .menu_services_item:nth-child(n + 2) {
         margin-left: 30px;
     }
+
     .contacts {
         display: flex;
     }
+
     .contacts_media_icon:nth-child(n + 2) {
         margin-left: 30px;
     }
+
     .contacts_media_icons {
         display: flex;
         margin-left: 47px;
     }
+
     .mobile_header {
         display: none;
     }
+
     .content {
         margin-top: 90px;
         display: flex;
         justify-content: space-between;
     }
+
     .left_block {
         width: 362px;
     }
+
     .left_block_subtitle {
         width: 275px;
         margin-top: 30px;
     }
+
     .right_block {
         display: block;
         width: 300px;
         text-align: end;
     }
+
     .right_block_title_white_text {
         font-size: 18px;
         font-weight: 500;
         line-height: 22px;
         color: #E4E5EA;
     }
+
     .right_block_title_gradient_text {
         font-size: 18px;
         font-weight: 700;
         line-height: 22px;
         text-transform: uppercase;
     }
+
     .right_block_title_part_2 {
         background: linear-gradient(to right, #fcb045 2%, #ff3f78 60%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
+
     .right_block_title_part_3 {
         background: linear-gradient(to right, #fcb045 75%, #ff3f78 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
+
     .right_block_gifts_list {
         margin-top: 40px;
         display: grid;
@@ -343,10 +393,12 @@
         justify-content: end;
         justify-items: end;
     }
+
     .right_block_gift {
         width: 135px;
         cursor: pointer;
     }
+
     .right_block_gift_title {
         text-align: end;
         font-size: 18px;
@@ -358,9 +410,11 @@
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
         transition-duration: 140ms;
     }
+
     .right_block_gift_title:hover {
         color: #7b83bb;
     }
+
     .right_block_gift_text {
         text-align: end;
         font-family: Montserrat, Arial, sans-serif;
@@ -369,9 +423,11 @@
         line-height: 20px;
         color: #E4E5EA;
     }
+
     .right_block_button_consultation_container {
         margin-top: 60px;
     }
+
     .right_block_button_consultation_button {
         width: 262px;
         height: 61px;
@@ -389,44 +445,56 @@
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
         transition-duration: 140ms;
     }
+
     .right_block_button_consultation_button:hover {
         background: #5e87de;
     }
+
     .footer {
         display: block;
         height: 315px;
         margin-top: 70px;
         padding: 55px 0;
     }
+
     .footer_sections {
         display: grid;
         grid-template-columns: 0.26fr 0.44fr 0.30fr;
     }
+
     .footer_section_text_container {
         margin-top: 20px;
     }
-    .footer_section_text_blocks {
+
+    .footer_section_menu_text_blocks {
         display: flex;
     }
+
     .footer_section_menu_text_block_2 {
-        margin-left: 50px;
+        margin-left: 48px;
     }
+
     .footer_section_text:nth-child(n+2) {
         margin-top: 10px;
     }
+
     .footer_section_text_contacts:nth-child(n+2) {
         margin-top: 20px;
     }
+
     .footer_section_contacts_title {
         text-align: end;
     }
+
     .footer_section_contacts_text {
         text-align: end;
     }
+
     .footer_section_contacts_icons {
         display: flex;
         justify-content: end;
     }
+
     .footer_privacy_policy_text {
         text-align: end;
     }
@@ -436,28 +504,34 @@
     .app {
         padding: 0;
     }
+
     .box {
         width: 100%;
     }
+
     .background_purple_ball {
         width: 40px;
         height: 40px;
         left: 296px;
         top: 236px;
     }
+
     .background_red_big_ball {
         width: 43px;
         height: 43px;
         left: 29px;
         top: 402px;
     }
+
     .background_red_small_ball {
         display: none;
     }
+
     .background_purple_light {
         left: 258px;
         top: 107px;
     }
+
     .background_red_light {
         width: 211px;
         height: 210px;
@@ -468,16 +542,19 @@
     .header_desktop {
         display: none;
     }
+
     .mobile_header {
         display: block;
         padding: 20px 15px;
         height: 55px;
         background: black;
     }
+
     .mobile_header_menu_services_items_list {
         display: flex;
         justify-content: space-between;
     }
+
     .mobile_header_menu_services_item {
         text-transform: uppercase;
         font-size: 12px;
@@ -486,6 +563,7 @@
         color: #E4E5EA;
         cursor: pointer;
     }
+
     .mobile_header_menu_services_item:hover {
         color: #7b83bb;
     }
@@ -496,25 +574,24 @@
         padding: 40px 15px 60px 15px;
     }
 
-
-    /*.left_block {*/
-    /*    width: 362px;*/
-    /*}*/
     .left_block_title_text_part_1 {
         font-size: 36px;
         font-weight: 400;
         line-height: 44px;
         color: #E4E5EA;
     }
+
     .left_block_tile_welbex_text {
         font-size: 36px;
         font-weight: 900;
         line-height: 44px;
         color: #E4E5EA;
     }
+
     .left_block_tile_welbex_text_part_1 {
         color: #FCB045;
     }
+
     .left_block_subtitle {
         margin-top: 15px;
     }
@@ -522,34 +599,41 @@
     .right_block {
         display: none;
     }
+
     .right_block_button_consultation_container {
         display: none;
     }
+
     .mobile_right_block {
         margin-top: 47px;
     }
+
     .mobile_right_block_title_white_text {
         font-size: 18px;
         font-weight: 500;
         line-height: 22px;
         color: #E4E5EA;
     }
+
     .mobile_right_block_title_gradient_text {
         font-size: 18px;
         font-weight: 700;
         line-height: 22px;
         text-transform: uppercase;
     }
+
     .mobile_right_block_title_part_2 {
         background: linear-gradient(to right, #fcb045 2%, #ff3f78 60%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
+
     .mobile_right_block_title_part_3 {
         background: linear-gradient(to right, #fcb045 75%, #ff3f78 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
+
     .mobile_right_block_gifts_list {
         margin-top: 20px;
         display: grid;
@@ -557,12 +641,14 @@
         grid-template-columns: 115px 141px;
         grid-auto-rows: minmax(16px, auto);
     }
+
     .mobile_right_block_gift {
         display: flex;
         align-items: center;
         width: 135px;
         cursor: pointer;
     }
+
     .mobile_right_block_gift_dash {
         box-sizing: border-box;
         width: 10px;
@@ -571,65 +657,61 @@
         border-image-slice: 1;
         /*(to right, #fcb045 75%, #ff3f78 100%);*/
     }
-.mobile_right_block_gift_text {
-    margin-left: 5px;
-    text-transform: uppercase;
-    font-family: Montserrat, Arial, sans-serif;
-    font-size: 13px;
-    font-weight: 400;
-    line-height: 16px;
-    color: #E4E5EA;
-    transition-property: all;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 140ms;
-}
-.mobile_right_block_gift_text:hover {
-    color: #7b83bb;
-}
-.footer {
-    background: black;
-}
-.footer_sections {
-    display: flex;
-    height: 315px;
-    margin-top: 70px;
-    padding: 55px 0;
-    flex-direction: column;
-}
+
+    .mobile_right_block_gift_text {
+        margin-left: 5px;
+        text-transform: uppercase;
+        font-family: Montserrat, Arial, sans-serif;
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 16px;
+        color: #E4E5EA;
+        transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 140ms;
+    }
+
+    .mobile_right_block_gift_text:hover {
+        color: #7b83bb;
+    }
+
+    .footer {
+        background: black;
+        padding: 45px 15px 60px 15px;
+    }
     .footer_sections {
         display: flex;
         flex-direction: column;
     }
-
-
-
-
-    /*.footer_section_title {*/
-    /*    text-transform: uppercase;*/
-    /*    font-size: 14px;*/
-    /*    font-weight: 700;*/
-    /*    line-height: 17px;*/
-    /*    color: #656566;*/
-    /*}*/
-    /*.footer_section_text_container {*/
-    /*    margin-top: 20px;*/
-    /*}*/
-    /*.footer_section_text_blocks {*/
-    /*    display: flex;*/
-    /*}*/
-    /*.footer_section_menu_text_block_2 {*/
-    /*    margin-left: 50px;*/
-    /*}*/
-    /*.footer_section_text {*/
-    /*    cursor: pointer;*/
-    /*    font-size: 16px;*/
-    /*    font-weight: 400;*/
-    /*    line-height: 20px;*/
-    /*    color: #E4E5EA;*/
-    /*    transition-property: all;*/
-    /*    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);*/
-    /*    transition-duration: 140ms;*/
-    /*}*/
+    .footer_section:nth-child(n+2) {
+        margin-top: 30px;
+    }
+    .footer_section_title {
+        text-transform: uppercase;
+        font-size: 12px;
+        font-weight: 700;
+        line-height: 15px;
+        color: #656566;
+    }
+    .footer_section_text_container {
+        margin-top: 20px;
+    }
+    .footer_section_menu_text_blocks {
+        display: flex;
+    }
+    .footer_section_menu_text_block_2 {
+        margin-left: 48px;
+    }
+    .footer_section_text {
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 17px;
+        color: #E4E5EA;
+        transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 140ms;
+    }
     /*.footer_section_text:hover {*/
     /*    color: #7b83bb;*/
     /*}*/
@@ -652,9 +734,9 @@
     /*    line-height: 20px;*/
     /*    color: #E4E5EA;*/
     /*}*/
-    /*.footer_section_text:nth-child(n+2) {*/
-    /*    margin-top: 10px;*/
-    /*}*/
+    .footer_section_text:nth-child(n+2) {
+        margin-top: 10px;
+    }
     /*.footer_section_text_contacts:nth-child(n+2) {*/
     /*    margin-top: 20px;*/
     /*}*/
@@ -671,7 +753,6 @@
     /*.footer_section_contacts_icon {*/
     /*    cursor: pointer;*/
     /*}*/
-
     /*.footer_section_contacts_icon:nth-child(n+2) {*/
     /*    margin-left: 10px;*/
     /*}*/
